--- a/src/views/template/header.ejs
+++ b/src/views/template/header.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integração de Documentos</title>
+    <link rel="icon" type="image/x-icon" href="/static/img/icon.png">
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/stylesheets/style.css">
     <script src="/static/scripts/btn.js"></script>
