--- a/src/views/inicio.ejs
+++ b/src/views/inicio.ejs
@@ -14,7 +14,7 @@
             <form id='dispara-lyceum'>
                 <button class="btn btn-primary btn-integracao" id='btn-integracao'>Sincronizar Documentos&nbsp;&nbsp;&nbsp;&nbsp; <i class="fa-solid fa-arrow-right"></i></button>
                 <!--<button id="loading" disabled style="display: none;"></button>-->
-                <button id="loading" class="btn btn-warning" disabled style="display: none;">Carregando Documentos&nbsp;&nbsp;&nbsp;&nbsp; </button>
+                <button id="loading" class="btn btn-warning" style="display: none;">Carregando Documentos&nbsp;&nbsp;&nbsp;&nbsp; </button>
             </form>
         </div>
         
