--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -95,12 +95,13 @@ body{
   border-top-color: #000;
   animation: loading 1.5s ease-in-out infinite;
   margin: auto;
-  margin-top: -2px;
+  margin-top: 2px
 }
 
 /* Define a posição do ícone de carregamento */
 button.loading {
   position: initial;
+  color: #000 !important;
 }
 
 button.loading .loading::after {
